First stab at research part of Durham talk

--- a/2017/06-07-Durham-computing.tex
+++ b/2017/06-07-Durham-computing.tex
@@ -45,7 +45,7 @@ London
 \inst{*}\texttt{lawrence.mitchell@imperial.ac.uk}
 }
 
-\graphicspath{{./\jobname.figures/}}
+\graphicspath{{./\jobname.figures/}{../pictures/}}
 
 \usepackage[url=false,
             doi=true,
