--- a/2017/12-06-FEniCS-solvers.tex
+++ b/2017/12-06-FEniCS-solvers.tex
@@ -40,7 +40,7 @@ London
 \inst{2}Department of Mathematics, Baylor University
 }
 
-\graphicspath{{./\jobname.figures/}}
+\graphicspath{{./\jobname.figures/}{../pictures/}}
 \newenvironment{changemargin}[2]{%
   \begin{list}{}{%
     \setlength{\topsep}{0pt}%
@@ -428,7 +428,7 @@ solve(a == L, x, solver_parameters=opts)
 \setbeamertemplate{background}{}
 \begin{frame}[plain]
   \begin{tikzpicture}[remember picture,overlay]
-    \node[at=(current page.center)] {\includegraphics[width=\paperwidth]{underhand}};
+    \node[at=(current page.center)] {\includegraphics[width=\paperwidth]{dogs-poker}};
   \end{tikzpicture}
 \end{frame}
 \egroup
