--- a/2018/25-01-Durham-computing.tex
+++ b/2018/25-01-Durham-computing.tex
@@ -45,7 +45,8 @@
   {\texttt{doi:\,#1}{}}%
 }
 
-\author{Lawrence Mitchell\inst{1,*}}
+\author{Lawrence Mitchell\inst{1,*} \\ {\scriptsize C.J.~Cotter,
+    D.A.~Ham, M.~Homolya, T.~K\"arn\"a, P.H.J.~Kelly, R.C.~Kirby, E.H.~M\"uller, \ldots}}
 \institute{
 \inst{1}Departments of Computing and Mathematics, Imperial College
 London
@@ -87,7 +88,6 @@ London
 \RecustomVerbatimEnvironment{Verbatim}{BVerbatim}{}
 
 \title{Symbolic numerical computing}
-\subtitle{High performance solvers for partial differential equations}
 \begin{document}
 \begin{frame}[plain,noframenumbering]
   \maketitle
@@ -98,119 +98,59 @@ London
 \end{frame}
 
 \begin{frame}
-  \frametitle{History}
-  
+  \frametitle{Outline}
+
+  \begin{itemize}
+  \item Overview of some recent research
+    \begin{itemize}
+    \item Fast solvers for numerical weather prediction
+    \item Automated finite elements
+    \end{itemize}
+  \item In depth
+    \begin{itemize}
+    \item Compiling finite element problems
+    \end{itemize}
+  \item Future directions
+  \end{itemize}
+\end{frame}
+
+\section{Recent highlights}
+\begin{frame}
+  \frametitle{Numerical weather prediction}
+  \begin{center}
+    \includegraphics[width=3cm]{earth}
+  \end{center}
+  \begin{block}{Challenge}
+    Invert elliptic operator fast enough for operational forecasting.
+
+    High aspect ratio: black-box numerical solvers struggle.
+
+    Need scalable, custom solver.
+  \end{block}
+\end{frame}
+\begin{frame}
+  \frametitle{Multigrid approach}
+  \begin{center}
+    \begin{tikzpicture}
+      \node (B) {\includegraphics[height=2cm]{bandedmatrix}};
+      \node (C) [right=0.3cm of B,yshift=0.6cm] {\includegraphics[height=1.5cm]{columndofs}};
+      \node (A) [below=0.1cm of C] {\includegraphics[height=1cm]{MeshHierarchy}};
+      \end{tikzpicture}
+    \end{center}
+    Developed custom tensor-product multigrid scheme, showed robustness
+    and scalability.
+
+  \begin{block}{Research impact}
+    Approach is used by UK Met Office in their next generation dynamical
+    core.
+
+    Providing a weather forecast to you in 2025.
+  \end{block}
 \end{frame}
 
 \begin{frame}
-  \frametitle{Electrophysiology}
-  \includegraphics[width=0.5\textwidth]{carp-heart-picture}
-
-  \includegraphics[width=0.5\textwidth]{carp-scaling}
-\end{frame}
-
-\begin{frame}
-  \frametitle{GungHo Multigrid}
-  \includegraphics[height=0.3\textheight]{gungho-multigrid-mesh-hierarchy}
-
-  \includegraphics[height=0.6\textheight]{gungho-multigrid-scaling}
-
-\end{frame}
-\begin{frame}
-  \frametitle{TSFC}
-  \begin{tikzpicture}[>=stealth',scale=1.5]
-    \node (ufl) at (0, 0) {UFL};
-    \node (c) at (0, -4) {C / COFFEE};
-
-    \node (ufl_) at (-2.5, 0) [gray!100] {\small \textit{Form language}};
-    \node (c_) at (-2.5, -4) [gray!100] {\small \textit{Host language}};
-
-    \node (gem) at (0, -2) {GEM};
-    \node (gem_) at (-2.5, -2) [gray!100,text width=1in,align=center]
-    {\small \textit{Tensor algebra language}};
-
-    \draw[->] (ufl) -> (gem) node [midway,right,text width=1in,align=center]
-    {\small lower finite elements and geometry};
-    \draw[->] (gem) -> (c) node [midway,right,text width=1in,align=center]
-    {\small schedule operations, create loop structure, etc.};
-  \end{tikzpicture}
-
-  \begin{tikzpicture}[>=stealth',scale=0.6]
-    \tikzstyle{t} = [draw,shape=rectangle,rounded corners,minimum size=1.6em,inner sep=0.3em,fill=gray!30]
-    \tikzstyle{n} = [draw,shape=ellipse,minimum size=1.8em,inner sep=1pt,fill=gray!10]
-    \tikzstyle{m} = [draw,shape=rectangle,minimum size=1.6em,inner sep=0.3em,fill=gray!60]
-%%
-\node (itg0_n0021) at (247.39bp,234.0bp) [n] {MatVec};
-  \node (itg0_n0008) at (128.39bp,234.0bp) [n] {MatVec};
-  \node (itg0_n0027) at (288.39bp,90.0bp) [m] {ReferenceValue};
-  \node (itg0_n0003) at (366.39bp,306.0bp) [n] {abs};
-  \node (itg0_n0002) at (169.39bp,162.0bp) [n] {transpose};
-  \node (itg0_n0001) at (363.39bp,18.0bp) [n] {$J$};
-  \node (itg0_n0000) at (306.39bp,378.0bp) [n] {*};
-  \node (form_a) at (306.39bp,522.0bp) [t] {Form a};
-  \node (itg0_n0006) at (169.39bp,90.0bp) [n] {inverse};
-  \node (itg0_n0005) at (247.39bp,306.0bp) [n] {dot};
-  \node (itg0_n0004) at (366.39bp,234.0bp) [n] {det};
-  \node (itg0_n0014) at (50.395bp,90.0bp) [m] {ReferenceValue};
-  \node (itg0_n0015) at (50.395bp,18.0bp) [m] {$v_1$};
-  \node (itg0_n0013) at (50.395bp,162.0bp) [m] {ReferenceGrad};
-  \node (a_celleverywhere) at (306.39bp,450.0bp) [t] {Cell integral everywhere};
-  \node (itg0_n0026) at (288.39bp,162.0bp) [m] {ReferenceGrad};
-  \node (itg0_n0028) at (288.39bp,18.0bp) [m] {$v_0$};
-  \draw [->] (itg0_n0014) -- node[auto] {$$} (itg0_n0015);
-  \draw [->] (itg0_n0002) -- node[auto] {$$} (itg0_n0006);
-  \draw [->] (itg0_n0027) -- node[auto] {$$} (itg0_n0028);
-  \draw [->] (itg0_n0013) -- node[auto] {$$} (itg0_n0014);
-  \draw [->] (itg0_n0005) -- node[auto] {$$} (itg0_n0021);
-  \draw [->] (itg0_n0021) -- node[auto] {L} (itg0_n0002);
-  \draw [->] (itg0_n0000) -- node[auto] {$$} (itg0_n0003);
-  \draw [->] (itg0_n0008) -- node[auto] {R} (itg0_n0013);
-  \draw [->] (itg0_n0026) -- node[auto] {$$} (itg0_n0027);
-  \draw [->] (itg0_n0004) -- node[auto] {$$} (itg0_n0001);
-  \draw [->] (itg0_n0005) -- node[auto] {$$} (itg0_n0008);
-  \draw [->] (itg0_n0008) -- node[auto] {L} (itg0_n0002);
-  \draw [->] (itg0_n0021) -- node[auto] {R} (itg0_n0026);
-  \draw [->] (itg0_n0000) -- node[auto] {$$} (itg0_n0005);
-  \draw [->] (a_celleverywhere) -- node[auto] {$$} (itg0_n0000);
-  \draw [->] (itg0_n0006) -- node[auto] {$$} (itg0_n0001);
-  \draw [->] (form_a) -- node[auto] {$$} (a_celleverywhere);
-  \draw [->] (itg0_n0003) -- node[auto] {$$} (itg0_n0004);
-%
-  \end{tikzpicture}
-\end{frame}
-% \begin{frame}[t]
-%   \frametitle{A problem}
-%   \begin{itemize}
-%   \item Computational simulation underpins much of modern science and
-%     engineering.
-%   \item Simulation models are ever more complex.
-%   \item The extra computational effort used to be offset by increased
-%     hardware performance \ldots
-%   \end{itemize}
-%   \begin{columns}
-%     \begin{column}{0.95\paperwidth}
-%       \includegraphics[height=4cm]{dome-entrainment}\hfill\includegraphics[height=4cm]{columbia-plume}
-%     \end{column}
-%   \end{columns}
-% \end{frame}
-
-% \begin{frame}
-%   \frametitle{The free lunch finished a long time ago}
-%     \begin{center}
-%       \includegraphics[height=0.6\textheight]{processor-trends}
-%     \end{center}
-%     \vspace{-2em}
-%     \begin{flushright}
-%       {\tiny Figure courtesy Karl Rupp (CC-BY 4.0) \url{https://www.karlrupp.net/2015/06/40-years-of-microprocessor-trend-data/}}
-%     \end{flushright}
-%   \begin{itemize}
-%   \item Today's simulation models will run probably \emph{slower}, not faster, on
-%     tomorrow's hardware.
-%   \end{itemize}
-% \end{frame}
-
-\begin{frame}
-  \frametitle{What are the challenges?}
+  \frametitle{Automated finite elements}
+  \begin{block}{Challenge}
   \begin{itemize}
   \item Simulation software needs to exploit \emph{fine-grained}
     parallelism.
@@ -218,11 +158,76 @@ London
     its \emph{implementation}.
   \item To apply program transformations, we have to unpick,
     understand, and reimplement.
+  \item \emph{Every time} the hardware changes.
+  \item Most researchers do not have the skills necessary to be
+    application and HPC experts.
   \end{itemize}
+  \end{block}
 \end{frame}
 
+\begin{frame}
+  \frametitle{Firedrake \url{www.firedrakeproject.org}}
+  \begin{quote}
+    {\normalfont [\ldots]} an automated system for the solution of
+    partial differential equations using the finite element method.
+  \end{quote}
+  \begin{itemize}
+  \item Written in Python.
+  \item Finite element problems specified with embedded domain
+    specific language.
+  \item Domain-specific optimising compiler.
+  \item Runtime compilation to low-level (C) code.
+  \item Transparently parallel.
+  \end{itemize}
+  \begin{flushright}
+    {\scriptsize F.~Rathgeber, D.A.~Ham, \textbf{LM}, M.~Lange,
+      F.~Luporini, A.T.T.~McRae, G.-T.~Bercea, G.R.~Markall,
+      P.H.J.~Kelly. ACM Transactions on Mathematical Software,
+      2016. \arxivlink{1501.01809}{cs.MS}}
+  \end{flushright}
+\end{frame}
+\begin{frame}
+  \frametitle{Highlights}
+  \begin{itemize}
+  \item Dramatically simplifies numerical model development.  Often
+    from months/years to days/weeks.
+  \item Delivers ``better than most humans'' computational
+    performance.
+  \item New code separates mathematics from implementation.  More
+    portable to future architectures.
+  \item \emph{Enables} productive interdisciplinary collaboration.
+  \end{itemize}
+
+  \begin{block}{Future research direction}
+    \begin{itemize}
+    \item Code transformations for efficient execution on GPUs
+    \end{itemize}
+  \end{block}
+\end{frame}
+\begin{frame}
+  \frametitle{Impact \& use}
+  \begin{block}{Academic}
+    \begin{itemize}
+    \item Used by research groups at Imperial, Baylor, Kiel, Exeter,
+      Oxford, Leeds, Waterloo, Buffalo, \ldots
+
+    \item Teaching tool at Waterloo, Imperial.
+    \end{itemize}
+  \end{block}
+  \begin{block}{Industrial}
+    \begin{itemize}
+    \item Guides design of computational and numerical schemes in UK
+      Met Office's next forecasting system.
+
+    \item Optimisation of tidal turbine array placement (MeyGen).
+    \end{itemize}
+  \end{block}
+\end{frame}
+
+\section{Compiling finite element problems}
+
 \begin{frame}[fragile]
-  \frametitle{Exploiting mathematical abstractions}
+  \frametitle{Exploit mathematical abstractions}
   Compute $y \leftarrow \nabla^2 x$ using finite differences.
   \begin{equation*}
     y_{i,j} = x_{i-1, j} + x_{i+1, j} + x_{i, j-1} + x_{i, j+1} - 4x_{i,j}    
@@ -230,6 +235,9 @@ London
   \begin{overlayarea}{\textwidth}{0.8\textheight}
   \begin{onlyenv}<1>
     \begin{block}{Before 1953}
+      \vspace{1em}
+      \begin{columns}
+        \begin{column}{0.5\textwidth}
 \begin{minted}[fontsize=\tiny]{asm}
         ...
         faddp   %st, %st(1)
@@ -251,11 +259,26 @@ London
         fstps   y.3307(,%ecx,4)
         ...
 \end{minted}
+        \end{column}
+        \begin{column}{0.5\textwidth}
+          \begin{tikzpicture}
+            \node[draw,rectangle, thick, text width=1in, align=center]
+            (A) {\small Pen and paper};
+            \node[draw, below=3cm of A, rectangle, thick, text width=1in, align=center]
+            (C) {\small Machine code};
+            \draw[-stealth] (A) -> (C) node [midway,right,text width=1in,align=center]
+            {\small Manual};
+          \end{tikzpicture}
+        \end{column}
+      \end{columns}
     \end{block}
     % Picture: pen-and-paper -> machine code
   \end{onlyenv}
   \begin{onlyenv}<2->
     \begin{block}{1953--present: Formula Translation}
+      \vspace{1em}
+      \begin{columns}
+        \begin{column}{0.5\textwidth}
 \begin{minted}[fontsize=\tiny]{fortran}
       PROGRAM MAIN
       PARAMETER (N=100)
@@ -263,138 +286,71 @@ London
       [...]
       DO 10 J=2,N-1
          DO 20 I=2,N-1
-            Y(I,J)=X(I-1,J)+X(I+1,J)+X(I,J-1)+X(I,J+1)+4*X(I,J)
+            Y(I,J)=X(I-1,J)+X(I+1,J)+
+     $           X(I,J-1)+X(I,J+1)+4*X(I,J)
  20      CONTINUE
  10   CONTINUE
       [...]
       END
 \end{minted}
+        \end{column}
+        \begin{column}{0.5\textwidth}
+          \begin{tikzpicture}
+            \node[draw,rectangle, thick, text width=1in, align=center]
+            (A) {\small Pen and paper};
+            \node[draw, below=of A, rectangle, thick, text width=1in, align=center]
+            (B) {\small Low-level code};
+            \node[draw, below=of B, rectangle, thick, text width=1in, align=center]
+            (C) {\small Machine code};
+            \draw[-stealth] (A) -> (B) node [midway,right,text width=1in,align=center]
+            {\small Manual};
+            \draw[-stealth] (B) -> (C) node [midway,right,text width=1in,align=center]
+            {\small Automated};
+          \end{tikzpicture}
+        \end{column}
+      \end{columns}
     \end{block}
-    % Picture: pen-and-paper -> fortran -> machine code
   \end{onlyenv}
   \end{overlayarea}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Firedrake \url{www.firedrakeproject.org}}
-
-  \begin{quote}
-    {\normalfont [\ldots]} an automated system for the solution of partial
-    differential equations using the finite element method.
-  \end{quote}
-
-  \begin{itemize}
-  \item Written in Python.
-  \item Finite element problems specified with \emph{embedded} domain
-    specific language.
-  \item Domain-specific optimising compiler.
-  \item Runtime compilation to low-level (C) code.
-  \item Transparently parallel.
-  \end{itemize}
-
-  \begin{flushright}
-    {\scriptsize F.~Rathgeber, D.A.~Ham, \textbf{LM}, M.~Lange,
-      F.~Luporini, A.T.T.~McRae, G.-T.~Bercea, G.R.~Markall,
-      P.H.J.~Kelly. ACM Transactions on Mathematical Software,
-      2016. \arxivlink{1501.01809}{cs.MS}}
-  \end{flushright}
-\end{frame}
-
-\begin{frame}
-  \frametitle{Finite element crash course}
+\begin{frame}[fragile]
+  \frametitle{Fit to the mathematics}
   \begin{columns}
     \begin{column}{0.5\textwidth}
-      \begin{align*}
-        \nabla^2 u &= 0 \text{ in $\Omega$}\\
-        u &= g \text{ on $\Gamma_1$}\\
-        \frac{\partial u}{\partial n} &= h \text{ on $\Gamma_2$}
-      \end{align*}
+      \begin{equation*}
+        a(u, v) = \int_\Omega \nabla u \cdot \nabla v\,\text{d}x \quad \forall v \in V
+      \end{equation*}
+\begin{minted}[fontsize=\scriptsize]{python}
+V = FiniteElement("Lagrange", 
+                  triangle, 1)
+u = TrialFunction(V)
+v = TestFunction(V)
+F = dot(grad(u), grad(v))*dx
+\end{minted}
     \end{column}
     \begin{column}{0.5\textwidth}
       \begin{tikzpicture}
-        \draw[very thick, line cap=rect] (0,0) -- (5, 0) (0, 0) arc
-        (180:360:2.5);
+        \node[draw,rectangle, thick, text width=1in, align=center]
+        (A) {\small Pen and paper}; \node[draw, below=of A,
+        rectangle, thick, text width=1in, align=center] (B) {\small
+          High-level code}; \node[draw, below=of B, rectangle,
+        thick, text width=1in, align=center] (C) {\small Low-level
+          code}; \node[draw, below=of C, rectangle, thick, text
+        width=1in, align=center] (D) {\small Machine code};
+        \draw[-stealth] (A) -> (B) node [midway,right,text
+        width=1in,align=center] {\small Manual}; \draw[-stealth] (B)
+        -> (C) node [midway,right,text width=1in,align=center]
+        {\small Automated}; \draw[-stealth] (C) -> (D) node
+        [midway,right,text width=1in,align=center] {\small
+          Automated};
       \end{tikzpicture}
     \end{column}
   \end{columns}
-
-  Seek \emph{weak} solution in some space of functions $V(\Omega)$.
-
-  Now we need to solve the (infinite dimensional) problem, find $u\in V$ s.t.
-  \begin{equation*}
-    -\int_\Omega \nabla u \cdot \nabla v\, \text{d}x = 0 \quad \forall\, v \in V
-  \end{equation*}
-\end{frame}
-\begin{frame}
-  \frametitle{Finite element crash course}
-  \begin{columns}
-    \begin{column}{0.5\textwidth}
-      Choose a \emph{triangulation}, $\mathcal{T}$, for $\Omega$, and
-      a finite dimensional subspace $V_h \subset V$.  Then
-    \end{column}
-    \begin{column}{0.5\textwidth}
-        \begin{tikzpicture}
-          \path (0,0) arc[radius=2.5, start angle=180, end angle=360]
-          node[name=E,pos=0,swap] {} node[name=F,pos=0.25,swap] {}
-          node[name=G,pos=0.5,swap] {} node[name=H,pos=0.82,swap] {}
-          node[name=I,pos=1,swap] {}; \node (A) at (2.5, 0) {}; \node
-          (B) at (1.4, -0.7) {}; \node (C) at (3.4, -1.2) {}; \node
-          (D) at (1.8, -1.5) {};
-
-          \draw[color=black, very thick, line cap=butt, line
-          join=round] (E.center) -- (A.center) -- (I.center) --
-          (H.center) -- (G.center) -- (F.center) -- (E.center) --
-          cycle; \draw[color=black, very thick, line cap=butt, line
-          join=round] (E.center) -- (B.center) -- (D.center) --
-          (F.center) -- (B.center); \draw[color=black, very thick,
-          line cap=butt, line join=round] (G.center) -- (D.center) --
-          (C.center) -- (G.center); \draw[color=black, very thick,
-          line cap=butt, line join=round] (B.center) -- (A.center) --
-          (C.center) -- (B.center); \draw[color=black, very thick,
-          line cap=butt, line join=round] (H.center) -- (C.center) --
-          (I.center);
-        \end{tikzpicture}
-    \end{column}
-  \end{columns}
-
-  \begin{equation*}
-    -\int_\Omega \! \nabla u \cdot \nabla v\,\text{d}x \approx -\sum_{e\in\mathcal{T}}
-    \int_e\! \nabla u_h \cdot \nabla v_h \,\text{d}x.
-  \end{equation*}
-
 \end{frame}
 
 \begin{frame}[fragile]
-  \frametitle{Fit to the mathematics}
-  \begin{itemize}
-  \item Firedrake builds on, and extends, embedded DSLs developed in
-    the FEniCS project.
-  \item Particularly, the \emph{Unified Form Language} to
-    specify variational forms.
-  \item Synthesise efficient implementation from symbolic description
-    + problem-specific data.
-  \end{itemize}
-  \begin{columns}
-    \begin{column}{0.4\textwidth}
-      \begin{equation*}
-        \int_\Omega \nabla u \cdot \nabla v\,\text{d}x
-      \end{equation*}
-    \end{column}
-    \hspace{-3em}
-    \begin{column}{0.6\textwidth}
-\begin{minted}[fontsize=\scriptsize]{python}
-V = FiniteElement("Lagrange", triangle, 1)
-u = TrialFunction(V)
-v = TestFunction(V)
-a = dot(grad(u), grad(v))*dx
-\end{minted}
-    \end{column}
-  \end{columns}
-  % Picture pen-and-paper -> Firedrake -> C -> machine-code
-\end{frame}
-
-\begin{frame}[fragile]
-  \frametitle{TSFC: A compiler for finite elements}
+  \frametitle{TSFC: a compiler for finite elements}
   Domain specific compiler translates UFL into
   low-level code for performing an element integral.
   \begin{flushright}
@@ -483,24 +439,23 @@ void cell_integral(double A[3][3],
 \end{frame}
 
 \begin{frame}
-  \frametitle{Compiler passes}
+  \frametitle{TSFC: compiler passes}
   \begin{block}{Vectorisation}
-    Align and pad data structures, then use intrinsics or rely on
+    Align and pad data structures, then use intrinsics or rely on C
     compiler.
   \end{block}
 
-  \begin{block}{Loop transformations}
+  \begin{block}{Loop transformations \& flop reduction}
     Solve ILP problem to drive factorisation, code motion, and common
     subexpression elimination.
   \end{block}
 
   \begin{block}{Sum factorisation}
-    An important class of finite elements uses \emph{tensor product}
-    basis functions
+    Some finite elements use \emph{tensor product} basis functions
     \begin{equation*}
       \phi_{i,q} := \phi_{(j,k),(p,r)} = \varphi_{j,p}\varphi_{k,r}
     \end{equation*}
-    These enable application of low-complexity algorithms.
+    These permit low-complexity algorithms for evaluation of integrals.
   \end{block}
 \end{frame}
 
@@ -586,9 +541,27 @@ degree flops_vanilla flops_opt\\
       \end{loglogaxis}
     \end{tikzpicture}
   \end{center}    
-  \end{column}
-  \end{columns}  
+\end{column}
+\end{columns}  
 \end{frame}
+
+\begin{frame}
+  \frametitle{Application: coastal ocean modelling}
+  \begin{center}
+    \includegraphics[width=0.45\textwidth]{thetis-rhine} \hspace{1em}
+    \includegraphics[width=0.45\textwidth]{selfe-rhine}
+  \end{center}
+  \begin{block}{New model}
+    \begin{itemize}
+    \item Better solutions than previous model in group.
+    \item 4-8x faster than models with comparative quality of
+      results.
+    \item Is differentiable: can use for PDE-constrained optimisation.
+    \item Only 1.5 person years.
+    \end{itemize}
+  \end{block}
+\end{frame}
+\section{Future research}
 
 \begin{frame}
   \frametitle{High performance solvers}
@@ -598,36 +571,53 @@ degree flops_vanilla flops_opt\\
   \item Designing robust, scalable solvers is a vast area of research
     in applied mathematics.
   \item Papers often only present (serial) proof of concept.
-  \item Want to bring solvers to the masses.
   \end{itemize}
   \begin{block}{Idea}
-    Mathematics is the language used to derive optimal solvers.
+    \begin{itemize}
+    \item Mathematics is the language used to derive optimal solvers.
 
-    Why is it not the language we use to describe their implementation?
+    \item It \emph{should be} the language we use to describe their implementation.
+    \end{itemize}
   \end{block}
+\end{frame}
 
-  Just do vision of where and how you want to get there.
-
-  What to do: abstractions, compiler design, portability.
+\begin{frame}
+  \begin{block}{Challenges}
+    \begin{itemize}
+    \item How to capture the mathematical building blocks in computer
+      code?
+    \item What does the compiler for this look like?
+    \item How can it be portable across new computer hardware?
+    \end{itemize}
+  \end{block}
+  \begin{block}{Rewards}
+    \begin{itemize}
+    \item Bring state-of-the-art numerical solvers to the masses.
+    \item Cross-fertilisation with programming language design.
+    \item Enable more exploratory, and creative, mathematics.
+    \end{itemize}
+  \end{block}
 \end{frame}
 
 
 \begin{frame}
   \frametitle{Summary}
   \begin{itemize}
-  \item DSLs are more than a pretty face.
-  \item Offer many opportunities for employing ``traditional''
-    computer science in new settings.  Productive interdisciplinary
-    research!
-  \item Much still to do:
+  \item Broad interdisciplinary research agenda spanning:
     \begin{itemize}
-    \item compiler development: vectorisation, GPUs, more tensor
-      algebra.
-    \item custom solver specification for ``hard'' problems: domain
-      decomposition, better multigrid, \ldots.
+    \item Programming languages
+    \item Compiler design
+    \item Numerical methods \& (non)linear algebra
+    \end{itemize}
+  \item Application areas:
+    \begin{itemize}
+    \item coastal ocean \& freshwater outflow
+    \item renewable energy
+    \item numerical weather prediction
     \end{itemize}
   \end{itemize}
 \end{frame}
+
 
 \section{Lecture excerpt}
 
